reverts accidental deletion of enable-preview args in pom.